Replace DependentLink with SingleDependentLink in let